--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -5,15 +5,133 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/app_bar_account"
-        tools:context=".AccountActivity">
+        android:background="@color/colorPrimary"
+        tools:context=".DeleteAccountActivity">
 
-    <TextView
-            android:text="Account Details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="72dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+
+    <android.support.v7.widget.CardView
+            android:layout_width="296dp"
+            android:layout_height="131dp"
+            app:cardBackgroundColor="@color/colorAccent"
+            android:layout_marginTop="88dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp">
+
+        <TableLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:layout_height="124dp">
+            <TableRow>
+                <TextView
+                        android:text="@string/first_name"
+                        android:layout_width="117dp"
+                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="49dp"
+                        tools:layout_editor_absoluteX="44dp" android:id="@+id/first_name_label"
+                        android:textSize="18sp"
+                        android:paddingRight="5dp"
+                        android:textColor="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="16dp"/>
+                <TextView
+                        android:layout_width="134dp"
+                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="49dp"
+                        tools:layout_editor_absoluteX="44dp" android:id="@+id/first_name_text"
+                        android:textSize="18sp"
+                        android:textColor="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="16dp"/>
+            </TableRow>
+            <TableRow>
+                <TextView
+                        android:text="@string/last_name"
+                        android:paddingTop="5dp"
+                        android:paddingRight="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="84dp"
+                        tools:layout_editor_absoluteX="44dp" android:id="@+id/last_name_label"
+                        android:textSize="18sp"
+                        android:textColor="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+                <TextView
+                        android:paddingTop="5dp"
+                        android:layout_width="131dp"
+                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="84dp"
+                        tools:layout_editor_absoluteX="44dp" android:id="@+id/last_name_text"
+                        android:textSize="18sp"
+                        android:textColor="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+            </TableRow>
+            <TableRow>
+                <TextView
+                        android:text="@string/email"
+                        android:layout_width="wrap_content"
+                        android:paddingTop="5dp"
+                        android:paddingRight="5dp"
+                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="122dp"
+                        tools:layout_editor_absoluteX="44dp" android:id="@+id/email_label" android:textSize="18sp"
+                        android:textColor="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+                <TextView
+                        android:layout_width="199dp"
+                        android:paddingTop="5dp"
+                        android:layout_height="wrap_content" tools:layout_editor_absoluteY="122dp"
+                        tools:layout_editor_absoluteX="44dp" android:id="@+id/email_text" android:textSize="18sp"
+                        android:textColor="@color/white"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+            </TableRow>
+        </TableLayout>
+    </android.support.v7.widget.CardView>
+
+
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="303dp"
+            android:layout_height="182dp"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" android:id="@+id/linearLayout3">
+        <Button
+                android:text="@string/update_details"
+                android:layout_width="match_parent"
+                android:textAllCaps="false"
+                android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content" tools:layout_editor_absoluteY="178dp"
+                android:background="@drawable/register_button"
+                style="?android:attr/borderlessButtonStyle"
+                tools:layout_editor_absoluteX="44dp" android:id="@+id/change_details_button"
+                android:textColor="@color/white"/>
+        <Button
+                android:text="@string/delete_account"
+                android:layout_width="match_parent"
+                android:layout_marginBottom="10dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/delete_account_button"
+                android:layout_height="wrap_content" tools:layout_editor_absoluteY="250dp"
+                tools:layout_editor_absoluteX="44dp" android:id="@+id/delete_account_button"
+                android:textColor="@color/white"
+                android:textAllCaps="false"/>
+        <Button
+                android:text="@string/sign_out"
+                android:layout_width="match_parent"
+                style="?android:attr/borderlessButtonStyle"
+                android:background="@drawable/login_button"
+                android:textAllCaps="false"
+                android:layout_height="wrap_content" tools:layout_editor_absoluteY="322dp"
+                tools:layout_editor_absoluteX="44dp" android:id="@+id/sign_out_button"
+                android:textColor="@color/white"/>
+    </LinearLayout>
+
+
+
+
 </android.support.constraint.ConstraintLayout>
