--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#76D7C1</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="red">#A70000</color>
 
     <color name="colorSecondary">#7F0000</color>
     <color name="colorSecondaryDark">#4e0000</color>
