--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,17 +18,19 @@
 
         <ImageView
                 android:id="@+id/logo"
-                android:layout_width="193dp"
+                android:layout_width="163dp"
                 android:layout_height="152dp"
                 app:srcCompat="@drawable/logo"
                 android:contentDescription="@string/logo"
-                android:layout_marginTop="64dp" android:layout_marginBottom="12dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/email_input"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp" android:layout_marginTop="52dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.502"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/email_input"
-                android:layout_width="0dp"
+                android:layout_width="310dp"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress|textCapWords"
                 android:ems="10"
@@ -37,10 +39,11 @@
                 android:autofillHints="email"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginBottom="11dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/password_input"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="19dp"
-                android:layout_marginStart="19dp" android:layout_marginEnd="19dp" android:layout_marginRight="19dp"/>
+                android:layout_marginTop="36dp"
+                app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginRight="8dp"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/password_input"
@@ -53,11 +56,10 @@
                 android:autofillHints="password"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"
-                app:layout_constraintTop_toBottomOf="@+id/email_input" android:layout_marginBottom="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/forgot_password_text"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="19dp"
-                android:layout_marginStart="19dp" android:layout_marginEnd="19dp" android:layout_marginRight="19dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/email_input"
+                app:layout_constraintStart_toStartOf="@+id/email_input"
+                app:layout_constraintEnd_toEndOf="@+id/email_input" app:layout_constraintHorizontal_bias="0.0"
+        />
 
         <Button
                 android:text="@string/action_sign_in"
@@ -68,11 +70,10 @@
                 android:textColor="@color/white"
                 android:textAllCaps="false"
                 style="?android:attr/borderlessButtonStyle"
-                app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" android:layout_marginBottom="14dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/register_button"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
-                app:layout_constraintHorizontal_bias="0.0"/>
+                android:layout_marginTop="52dp"
+                app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
+                app:layout_constraintStart_toStartOf="@+id/password_input"
+                app:layout_constraintEnd_toEndOf="@+id/password_input"/>
         <Button
                 android:text="@string/action_register"
                 android:layout_width="0dp"
@@ -83,23 +84,20 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:background="@drawable/register_button"
                 android:textColor="@color/white"
-                android:layout_marginStart="18dp"
-                android:layout_marginEnd="18dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="18dp"
-                android:layout_marginRight="18dp"
-                app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.965"/>
+                app:layout_constraintStart_toStartOf="@+id/login_button"
+                app:layout_constraintEnd_toEndOf="@+id/login_button" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/login_button" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.0"/>
         <TextView
                 android:text="@string/action_forgot_password"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_height="21dp"
                 android:id="@+id/forgot_password_text"
                 android:textColor="@color/white" android:textSize="12sp"
-                app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="41dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/login_button"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="@+id/password_input"
+                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.502"/>
         <ProgressBar
                 style="?android:attr/progressBarStyle"
                 android:layout_width="45dp"
