--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#42A591</color>
     <color name="colorPrimaryDark">#007664</color>
+    <color name="colorPrimaryDark2">#529687</color>
     <color name="colorAccent">#76D7C1</color>
 
     <color name="white">#FFFFFF</color>
