--- a/app/src/main/res/drawable-v24/register_button.xml
+++ b/app/src/main/res/drawable-v24/register_button.xml
@@ -3,10 +3,10 @@
         android:color="?android:colorControlHighlight" >
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent"/>
-            <stroke android:color="@color/white"
-                    android:width="0dp" />
-            <corners android:radius="50dp" />
+            <solid android:color="@color/colorPrimary"/>
+            <stroke android:color="@color/colorPrimaryDark"
+                    android:width="5px" />
+            <corners android:radius="21dp" />
         </shape>
     </item>
 
