--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,9 +8,6 @@
         android:fillViewport="true">
 
     <android.support.constraint.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
@@ -18,32 +15,32 @@
 
         <ImageView
                 android:id="@+id/logo"
-                android:layout_width="163dp"
-                android:layout_height="152dp"
+                android:layout_width="214dp"
+                android:layout_height="169dp"
                 app:srcCompat="@drawable/logo"
                 android:contentDescription="@string/logo"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp" android:layout_marginTop="52dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.502"/>
+                android:layout_marginStart="120dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="120dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="76dp"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/email_input"
-                android:layout_width="310dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress|textCapWords"
                 android:ems="10"
                 android:hint="@string/prompt_email"
-                app:backgroundTint="@color/white"
                 android:autofillHints="email"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"
-                android:layout_marginTop="36dp"
-                app:layout_constraintTop_toBottomOf="@+id/logo" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="8dp"/>
+                android:textColor="@color/textDark"
+                android:background="@drawable/login_item" android:padding="10dp"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/logo"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/register_button"
+                app:layout_constraintVertical_bias="0.166"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/password_input"
@@ -52,52 +49,50 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:hint="@string/prompt_password"
-                app:backgroundTint="@color/white"
                 android:autofillHints="password"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"
+                android:textColor="@color/textDark"
                 app:layout_constraintTop_toBottomOf="@+id/email_input"
                 app:layout_constraintStart_toStartOf="@+id/email_input"
                 app:layout_constraintEnd_toEndOf="@+id/email_input" app:layout_constraintHorizontal_bias="0.0"
-        />
+                android:background="@drawable/login_item" android:padding="10dp" android:layout_marginTop="12dp"/>
 
         <Button
                 android:text="@string/action_sign_in"
                 android:layout_width="0dp"
-                android:layout_height="51dp"
+                android:layout_height="71dp"
                 android:id="@+id/login_button"
                 android:background="@drawable/login_button"
-                android:textColor="@color/white"
                 android:textAllCaps="false"
                 style="?android:attr/borderlessButtonStyle"
-                android:layout_marginTop="52dp"
-                app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
-                app:layout_constraintStart_toStartOf="@+id/password_input"
-                app:layout_constraintEnd_toEndOf="@+id/password_input"/>
+                android:textColor="@color/white"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/register_button"
+                app:layout_constraintEnd_toEndOf="@+id/register_button"/>
         <Button
                 android:text="@string/action_register"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="56dp"
                 android:id="@+id/register_button"
                 android:textAllCaps="false"
+                android:stateListAnimator="@null"
                 android:textStyle="normal"
-                style="?android:attr/borderlessButtonStyle"
                 android:background="@drawable/register_button"
                 android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="@+id/login_button"
-                app:layout_constraintEnd_toEndOf="@+id/login_button" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/login_button" app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_bias="0.0"/>
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toTopOf="@+id/login_button"
+                app:layout_constraintStart_toStartOf="@+id/password_input"
+                app:layout_constraintEnd_toEndOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.0"/>
         <TextView
                 android:text="@string/action_forgot_password"
                 android:layout_width="wrap_content"
-                android:layout_height="21dp"
+                android:layout_height="16dp"
                 android:id="@+id/forgot_password_text"
-                android:textColor="@color/white" android:textSize="12sp"
+                android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="@+id/password_input"
-                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintHorizontal_bias="0.502"/>
+                app:layout_constraintEnd_toEndOf="@+id/password_input" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/password_input" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/register_button"/>
         <ProgressBar
                 style="?android:attr/progressBarStyle"
                 android:layout_width="45dp"
