--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#42A591</color>
     <color name="colorPrimaryDark">#007664</color>
     <color name="colorPrimaryDark2">#529687</color>
+    <color name="textDark">#4A877A</color>
     <color name="colorAccent">#76D7C1</color>
 
     <color name="white">#FFFFFF</color>
