--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/email_input"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress|textCapWords"
+                android:inputType="textEmailAddress"
                 android:ems="10"
                 android:hint="@string/prompt_email"
                 android:autofillHints="email"
