--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,37 +23,39 @@
                 android:id="@+id/textView" android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="76dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="116dp" app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.501"/>
         <android.support.v7.widget.AppCompatEditText
-                android:layout_width="311dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName|textCapWords"
                 android:autofillHints="firstname"
-                app:backgroundTint="@color/white"
                 android:ems="10"
                 android:hint="@string/hint_first_name"
+                android:background="@drawable/login_item"
                 android:id="@+id/first_name_input"
-                android:textColorHint="@color/white" android:textColor="@color/white"
-                android:layout_marginTop="92dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.5"/>
+                android:textColorHint="@color/textDark" android:textColor="@color/textDark"
+                android:layout_marginTop="112dp"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"/>
 
         <android.support.v7.widget.AppCompatEditText
-                android:layout_width="311dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName|textCapWords"
                 android:autofillHints="lastname"
                 android:ems="10"
                 android:hint="@string/hint_last_name"
-                android:id="@+id/last_name_input"
-                android:textColorHint="@color/white" android:textColor="@color/white"
+                android:textColorHint="@color/textDark"
+                android:background="@drawable/login_item"
+                android:id="@+id/last_name_input" android:textColor="@color/textDark"
                 app:layout_constraintTop_toBottomOf="@+id/first_name_input"
                 app:layout_constraintStart_toStartOf="@+id/first_name_input"
                 app:layout_constraintEnd_toEndOf="@+id/first_name_input"
-                app:layout_constraintHorizontal_bias="0.0"/>
+                app:layout_constraintHorizontal_bias="0.0" android:padding="10dp" android:layout_marginTop="16dp"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/email_input"
@@ -62,14 +64,14 @@
                 android:inputType="textEmailAddress"
                 android:ems="10"
                 android:hint="@string/prompt_email"
-                app:backgroundTint="@color/white"
+                android:background="@drawable/login_item"
                 android:autofillHints="email"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"
+                android:textColorHint="@color/textDark"
+                android:textColor="@color/textDark"
                 app:layout_constraintTop_toBottomOf="@+id/last_name_input"
                 app:layout_constraintStart_toStartOf="@+id/last_name_input"
                 app:layout_constraintEnd_toEndOf="@+id/last_name_input" app:layout_constraintHorizontal_bias="0.0"
-        />
+                android:padding="10dp" android:layout_marginTop="16dp"/>
 
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/password_input"
@@ -78,30 +80,29 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:hint="@string/prompt_password"
-                app:backgroundTint="@color/white"
+                android:background="@drawable/login_item"
+                android:padding="10dp"
                 android:autofillHints="password"
-                android:textColorHint="@color/white"
-                android:textColor="@color/white"
+                android:textColorHint="@color/textDark"
+                android:textColor="@color/textDark"
                 app:layout_constraintTop_toBottomOf="@+id/email_input"
                 app:layout_constraintStart_toStartOf="@+id/email_input"
                 app:layout_constraintEnd_toEndOf="@+id/email_input" app:layout_constraintHorizontal_bias="0.0"
-        />
+                android:layout_marginTop="16dp"/>
 
         <Button
                 android:text="@string/action_register"
-                android:layout_width="242dp"
+                android:layout_width="0dp"
                 android:textAllCaps="false"
                 android:background="@drawable/login_button"
                 style="?android:attr/borderlessButtonStyle"
-                android:layout_height="wrap_content"
+                android:layout_height="71dp"
                 android:id="@+id/register_button" android:textColor="@color/white"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintHorizontal_bias="0.503"
-                android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/password_input"
-                android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintEnd_toEndOf="@+id/password_input"
+                android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/password_input" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/password_input" app:layout_constraintVertical_bias="1.0"
+                app:layout_constraintHorizontal_bias="1.0"/>
         <ProgressBar
                 style="?android:attr/progressBarStyle"
                 android:layout_width="85dp"
